# MiCasa

./: CMakeLists.txt  Makefile  README.md  folder.cpp  folder.h  folders.cpp  folders.h  loader.cpp  loader.h  main.cpp  micasa-config.h.in  micasa.cpp  micasa.h  pic.cpp  pic.h  texture.cpp  texture.h  vlclib-integration.cpp  vlclib-integration.h
cmake/: FindLIBVLC.cmake
imgui/: Makefile
resources/: folder16x16.c  folder64x64.c  loading.c  roboto-medium.c
